# german_document_classifier

./: .dockerignore  .gitignore  APPENDIX.md  Dockerfile  README.md  api.py  colab.ipynb  config.yaml  environment.yaml  flow.py  hyperparamsearch.py  kaggle.ipynb  kaggle.txt  main.py  pyproject.toml  requirements.txt  test.ipynb
api/: api.py
app/: flow.py  hyperparamsearch.py  main.py
app/api/: api.py
app/core/: data_loader.py  evaluate.py  path.py  paths.py  prepare_data.py  train.py  utils.py
app/data/data_processed/: all_data.csv
app/data/processed/: all_data.csv  synthetic_data.csv
app/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb  04_data_extraction.ipynb  colab.ipynb  kaggle.ipynb
app/sampler/: doc_generator.py  make_synthetic_data.py
app/services/: predict.py
app/src/: baseline.py  data_loader.py  evaluate.py  predict.py  prepare_data.py  train.py  utils.py
app/static/: index.html
app/statistics/: result.py
app/tests/: doc_generator.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  04_data_extraction.ipynb
src/: data_loader.py  evaluate.py  predict.py  train.py  utils.py
static/: index.html  style.css
tests/: doc_generator.py  make_synthetic_data.py  test.ipynb
