[project]
name = "german-document-classifier"
version = "0.1.0"
description = "German document classifier using transformers and fastapi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.11.0",
    "acres==0.5.0",
    "ci-info==0.3.0",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "docker-pycreds==0.4.0",
    "etelemetry==0.3.1",
    "evaluate==0.4.2",
    "faker>=38.2.0",
    "fastapi>=0.124.0",
    "git-filter-repo==2.47.0",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "httplib2==0.31.0",
    "importlib_resources==6.5.2",
    "isodate==0.7.2",
    "looseversion==1.3.0",
    "matplotlib>=3.9.0",
    "multiprocess==0.70.16",
    "munkres==1.1.4",
    "nibabel==5.3.2",
    "nipype==1.10.0",
    "pathlib==1.0.1",
    "protobuf==4.25.3",
    "prov==2.1.1",
    "puremagic==1.30",
    "pyarrow>=18.0.0",
    "pydot==4.0.1",
    "PyMuPDF==1.26.6",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "pyxnat==1.6.4",
    "rdflib==7.4.0",
    "reportlab==4.4.4",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.0",
    "sentry-sdk==2.43.0",
    "setproctitle==1.3.7",
    "simplejson==3.20.2",
    "smmap==5.0.2",
    "tokenizers==0.22.1",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm==4.66.5",
    "traits==7.0.2",
    "transformers>=4.40.0",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "uvicorn>=0.38.0",
    "wandb==0.18.5",
    "zstandard==0.25.0",
]

[tool.setuptools]
packages = ["app"]